[package]
name = "rustranslator"
version = "0.1.0"
authors = ["petitviolet <violethero0820@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["precommit-hook", "run-cargo-fmt"]

